revert atom alignment

--- a/magnetic_moment.ipynb
+++ b/magnetic_moment.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x2009f6ac810>"
+       "<torch._C.Generator at 0x21ca3cf0810>"
       ]
      },
      "execution_count": 1,
@@ -36,14 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data(x=[56, 6], edge_index=[2, 1], y=[56, 1])\n"
+      "Data(x=[55, 6], edge_index=[2, 1], y=[55, 1])\n"
      ]
     },
     {
@@ -58,7 +58,7 @@
     }
    ],
    "source": [
-    "dataset = AtomDataset(root='./', filename='4v.csv', threshold=2.0)\n",
+    "dataset = AtomDataset(root='./', filename='1v.csv', threshold=2.0)\n",
     "data = dataset._data\n",
     "print(data)"
    ]
