revise the preprocessor to generate a custom dataset for transformer training

--- a/magnetic_moment.ipynb
+++ b/magnetic_moment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "<torch._C.Generator at 0x21ca3cf0810>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,14 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data(x=[55, 6], edge_index=[2, 1], y=[55, 1])\n"
+      "Data(x=[56, 6], edge_index=[2, 1], y=[56, 1])\n"
      ]
     },
     {
@@ -58,25 +58,106 @@
     }
    ],
    "source": [
-    "dataset = AtomDataset(root='./', filename='1v.csv', threshold=2.0)\n",
+    "dataset = AtomDataset(root='./', filename='4v.csv', threshold=2.0)\n",
     "data = dataset._data\n",
     "print(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 1.0000,  0.0000,  0.0000,  4.8525, -3.4187,  0.5181],\n",
+       "        [ 1.0000,  0.0000,  0.0000, -7.0737,  3.1019, -0.4405],\n",
+       "        [ 1.0000,  0.0000,  0.0000, -7.7450, -1.3922,  0.6709],\n",
+       "        [ 1.0000,  0.0000,  0.0000, -8.7569,  4.7177, -0.4788],\n",
+       "        [ 1.0000,  0.0000,  0.0000, -5.0400, -3.7536,  0.1928],\n",
+       "        [ 1.0000,  0.0000,  0.0000, 10.1274, -3.1242,  0.0387],\n",
+       "        [ 1.0000,  0.0000,  0.0000, -7.1443, -3.3862, -0.3235],\n",
+       "        [ 1.0000,  0.0000,  0.0000,  9.5193, -1.0333,  0.7964],\n",
+       "        [ 1.0000,  0.0000,  0.0000, -4.7967,  3.4600, -0.2781],\n",
+       "        [ 1.0000,  0.0000,  0.0000, -1.3578,  1.8579,  1.3817],\n",
+       "        [ 1.0000,  0.0000,  0.0000, -2.7252, -0.1465,  1.4743],\n",
+       "        [ 1.0000,  0.0000,  0.0000, -5.7876,  1.2395,  0.0477],\n",
+       "        [ 1.0000,  0.0000,  0.0000, -2.5002,  3.7407,  0.2625],\n",
+       "        [ 1.0000,  0.0000,  0.0000, -3.5885,  1.7466,  0.6790],\n",
+       "        [ 1.0000,  0.0000,  0.0000, -4.3634, -1.6946,  1.0379],\n",
+       "        [ 1.0000,  0.0000,  0.0000, -0.3060,  3.8474,  0.9339],\n",
+       "        [ 1.0000,  0.0000,  0.0000,  7.4965,  0.9904, -0.7733],\n",
+       "        [ 1.0000,  0.0000,  0.0000,  6.6393, -4.8241,  0.6163],\n",
+       "        [ 1.0000,  0.0000,  0.0000,  4.0396,  4.2718,  0.0186],\n",
+       "        [ 1.0000,  0.0000,  0.0000,  5.1632,  0.9829, -0.8522],\n",
+       "        [ 1.0000,  0.0000,  0.0000,  6.0783,  2.9622, -0.2133],\n",
+       "        [ 1.0000,  0.0000,  0.0000,  2.5454, -3.6149,  0.1339],\n",
+       "        [ 1.0000,  0.0000,  0.0000, -0.7493, -1.4563, -1.1714],\n",
+       "        [ 1.0000,  0.0000,  0.0000,  0.8529,  0.3896, -1.1402],\n",
+       "        [ 1.0000,  0.0000,  0.0000,  3.7580, -1.4899,  0.0252],\n",
+       "        [ 1.0000,  0.0000,  0.0000,  0.2382, -3.5660, -0.3733],\n",
+       "        [ 1.0000,  0.0000,  0.0000,  1.5240, -1.6760, -0.6300],\n",
+       "        [ 1.0000,  0.0000,  0.0000,  2.8302,  1.5979, -0.7337],\n",
+       "        [ 1.0000,  0.0000,  0.0000, -1.9710, -3.4054, -0.9287],\n",
+       "        [ 1.0000,  0.0000,  0.0000,  9.8008,  1.8114, -0.4364],\n",
+       "        [ 0.0000,  1.0000,  0.0000, -9.0178, -1.8736,  0.4537],\n",
+       "        [ 0.0000,  1.0000,  0.0000, -7.4154,  4.4272, -0.4368],\n",
+       "        [ 0.0000,  1.0000,  0.0000, -5.3728, -2.4661,  0.5038],\n",
+       "        [ 0.0000,  1.0000,  0.0000, -6.7883, -2.2224,  0.2920],\n",
+       "        [ 0.0000,  1.0000,  0.0000, -8.4089, -3.9277, -0.2896],\n",
+       "        [ 0.0000,  1.0000,  0.0000, -6.1673, -4.3403, -0.2836],\n",
+       "        [ 0.0000,  1.0000,  0.0000, -5.8200,  2.5834, -0.2242],\n",
+       "        [ 0.0000,  1.0000,  0.0000, -3.9852, -0.3889,  1.0149],\n",
+       "        [ 0.0000,  1.0000,  0.0000, -1.4222,  3.1195,  0.8607],\n",
+       "        [ 0.0000,  1.0000,  0.0000, -3.6210,  3.0299,  0.1993],\n",
+       "        [ 0.0000,  1.0000,  0.0000, -4.6138,  0.8343,  0.5162],\n",
+       "        [ 0.0000,  1.0000,  0.0000, -2.4660,  1.1482,  1.2304],\n",
+       "        [ 0.0000,  1.0000,  0.0000,  8.6704,  1.4810, -0.6188],\n",
+       "        [ 0.0000,  1.0000,  0.0000,  5.3004, -4.7167,  0.3761],\n",
+       "        [ 0.0000,  1.0000,  0.0000,  4.1675,  1.8681, -0.6216],\n",
+       "        [ 0.0000,  1.0000,  0.0000,  6.3209,  1.5966, -0.6156],\n",
+       "        [ 0.0000,  1.0000,  0.0000,  6.7953,  4.0262,  0.3401],\n",
+       "        [ 0.0000,  1.0000,  0.0000,  4.6668,  3.1303, -0.2482],\n",
+       "        [ 0.0000,  1.0000,  0.0000,  3.6391, -2.8381,  0.2073],\n",
+       "        [ 0.0000,  1.0000,  0.0000,  2.1777,  0.4085, -0.7919],\n",
+       "        [ 0.0000,  1.0000,  0.0000, -0.7949, -2.7739, -0.8330],\n",
+       "        [ 0.0000,  1.0000,  0.0000,  1.4280, -2.9930, -0.2836],\n",
+       "        [ 0.0000,  1.0000,  0.0000,  2.6541, -0.9155, -0.4340],\n",
+       "        [ 0.0000,  1.0000,  0.0000,  0.4451, -0.8819, -1.0191],\n",
+       "        [ 0.0000,  0.0000,  1.0000,  8.0683,  3.9495,  0.6510]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data.x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m augmented_dataset, original_ys \u001b[38;5;241m=\u001b[39m \u001b[43maugment_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_new_data\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m50000\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mposition_noise\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.05\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmoment_noise\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\y1hli\\OneDrive - University of North Carolina at Chapel Hill\\github\\CNO-magnetic-moment\\randomizer.py:192\u001b[0m, in \u001b[0;36maugment_data\u001b[1;34m(data, num_new_data, max_translation, macro_transforms, position_noise, moment_noise, num_micro_per_macro)\u001b[0m\n\u001b[0;32m    188\u001b[0m new_data \u001b[38;5;241m=\u001b[39m macro_randomize(new_data, max_translation, macro_transforms)\n\u001b[0;32m    190\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num_micro_per_macro):\n\u001b[0;32m    191\u001b[0m     \u001b[38;5;66;03m#  Perform perturbations\u001b[39;00m\n\u001b[1;32m--> 192\u001b[0m     perturbed_data, original_y \u001b[38;5;241m=\u001b[39m \u001b[43mmicro_randomize\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnew_data\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mposition_noise\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmoment_noise\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    193\u001b[0m     randomized_datasets\u001b[38;5;241m.\u001b[39mappend(perturbed_data)\n\u001b[0;32m    194\u001b[0m     original_ys\u001b[38;5;241m.\u001b[39mappend(original_y)\n",
+      "File \u001b[1;32mc:\\Users\\y1hli\\OneDrive - University of North Carolina at Chapel Hill\\github\\CNO-magnetic-moment\\randomizer.py:150\u001b[0m, in \u001b[0;36mmicro_randomize\u001b[1;34m(data, position_noise, moment_noise)\u001b[0m\n\u001b[0;32m    148\u001b[0m \u001b[38;5;66;03m# perform micro-transform\u001b[39;00m\n\u001b[0;32m    149\u001b[0m transform \u001b[38;5;241m=\u001b[39m RandomMicroPerturbation(position_noise, moment_noise)\n\u001b[1;32m--> 150\u001b[0m randomized_data \u001b[38;5;241m=\u001b[39m \u001b[43mtransform\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrandomized_data\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    152\u001b[0m \u001b[38;5;66;03m# record the unaffected magnetic moment\u001b[39;00m\n\u001b[0;32m    153\u001b[0m original_y \u001b[38;5;241m=\u001b[39m transform\u001b[38;5;241m.\u001b[39mget_original_y(randomized_data)\n",
+      "File \u001b[1;32mc:\\Users\\y1hli\\OneDrive - University of North Carolina at Chapel Hill\\github\\CNO-magnetic-moment\\randomizer.py:91\u001b[0m, in \u001b[0;36mRandomMicroPerturbation.__call__\u001b[1;34m(self, data)\u001b[0m\n\u001b[0;32m     89\u001b[0m \u001b[38;5;66;03m# Add noise to coordinates\u001b[39;00m\n\u001b[0;32m     90\u001b[0m noise_coords \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mrandn_like(coords) \u001b[38;5;241m*\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mposition_noise\n\u001b[1;32m---> 91\u001b[0m \u001b[43mdata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mx\u001b[49m[:, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m3\u001b[39m:] \u001b[38;5;241m=\u001b[39m coords \u001b[38;5;241m+\u001b[39m noise_coords\n\u001b[0;32m     93\u001b[0m \u001b[38;5;66;03m# Add noise to magnetic moments\u001b[39;00m\n\u001b[0;32m     94\u001b[0m \u001b[38;5;66;03m# data.y typically has shape: (num_atoms,) or (num_atoms, 1)\u001b[39;00m\n\u001b[0;32m     95\u001b[0m noise_moment \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mrandn_like(data\u001b[38;5;241m.\u001b[39my) \u001b[38;5;241m*\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmoment_noise\n",
+      "File \u001b[1;32mc:\\Users\\y1hli\\OneDrive - University of North Carolina at Chapel Hill\\github\\CNO-magnetic-moment\\.venv\\Lib\\site-packages\\torch_geometric\\data\\data.py:950\u001b[0m, in \u001b[0;36mData.x\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    944\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124;03m\"\"\"Iterates over all attributes :obj:`*args` in the data, yielding\u001b[39;00m\n\u001b[0;32m    945\u001b[0m \u001b[38;5;124;03m    their attribute names and values.\u001b[39;00m\n\u001b[0;32m    946\u001b[0m \u001b[38;5;124;03m    If :obj:`*args` is not given, will iterate over all attributes.\u001b[39;00m\n\u001b[0;32m    947\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m    948\u001b[0m     \u001b[38;5;28;01myield from\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_store\u001b[38;5;241m.\u001b[39mitems(\u001b[38;5;241m*\u001b[39margs)\n\u001b[1;32m--> 950\u001b[0m \u001b[38;5;129m@property\u001b[39m\n\u001b[0;32m    951\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mx\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Optional[Tensor]:\n\u001b[0;32m    952\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mx\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mx\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_store \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m    954\u001b[0m \u001b[38;5;129m@x\u001b[39m\u001b[38;5;241m.\u001b[39msetter\n\u001b[0;32m    955\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mx\u001b[39m(\u001b[38;5;28mself\u001b[39m, x: Optional[Tensor]):\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "augmented_dataset, original_ys = augment_data(data=data, num_new_data=50000, position_noise=0.05, moment_noise=1)"
    ]
